[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ocean.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/MainEnvironment.tres" type="Environment" id=3]
[ext_resource path="res://Assets/sand.tres" type="Material" id=4]
[ext_resource path="res://Assets/moss.tres" type="Material" id=5]
[ext_resource path="res://Assets/Objects/myBoat/sourceFiles/boat.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Assets/Objects/Tree/tree_obj.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/Objects/modular_terrain_collection/Cave_Prop_Entrance_1.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/portal_animatedtexture.tres" type="Texture" id=9]
[ext_resource path="res://cais.gd" type="Script" id=10]
[ext_resource path="res://Assets/Objects/house/house.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Objects/pier.tscn" type="PackedScene" id=12]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.721, 0.5, 0.2 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 9 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 30, 25, 10 )

[sub_resource type="QuadMesh" id=5]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 9 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.805176, 2.15537, 9.80232 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 3.95878, 2.15109, 0.614056 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.0888857, 0.284619, 0.159197 )

[node name="cais" type="Spatial"]
script = ExtResource( 10 )

[node name="CSGBox" type="CSGBox" parent="."]
use_collision = true
width = 100.0
depth = 100.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox" type="CSGBox" parent="CSGBox"]
transform = Transform( 1, 0, 0, 0, 0.966841, -0.255378, 0, 0.255378, 0.966841, 0, -1.32559, 54.5911 )
width = 100.0
depth = 10.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox2" type="CSGBox" parent="CSGBox"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 50, 10, 0 )
width = 100.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox3" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 10, -50 )
width = 100.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox4" type="CSGBox" parent="CSGBox"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -50, 10, 0 )
width = 100.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox5" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 32.9222, 10, 0 )
width = 32.0
height = 20.0
material = ExtResource( 5 )

[node name="CSGBox6" type="CSGBox" parent="CSGBox"]
transform = Transform( 1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, -32.9272, 10, -4.37114e-06 )
width = 32.0
height = 20.0
material = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Ocean" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.383236, -0.27388, -0.0526333 )

[node name="mudeater" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.4, 0, -3.49691e-08, 0, 0.4, 0, 3.49691e-08, 0, -0.4, 0, 1.5, 0 )

[node name="Cave_Prop_Entrance_1" type="MeshInstance" parent="."]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, -43.8327, 1, -22.8954 )
mesh = ExtResource( 8 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = null
material/18 = null
material/19 = null
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = null
__meta__ = {
"_edit_lock_": true
}

[node name="areaCave" type="Area" parent="Cave_Prop_Entrance_1"]
transform = Transform( 1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Cave_Prop_Entrance_1/areaCave"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.75, 0.5 )
shape = SubResource( 1 )

[node name="portal" type="CSGMesh" parent="Cave_Prop_Entrance_1"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.448367, 0.851077, 0.738416 )
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="tree_obj" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-09, 0, -0.1, 0, 0.1, 0, 0.1, 0, -4.37114e-09, 38, 1, -36 )
mesh = ExtResource( 7 )
material/0 = null
material/1 = null
material/2 = null
__meta__ = {
"_edit_lock_": true
}

[node name="tree_obj" type="MeshInstance" parent="tree_obj"]
transform = Transform( 1, 0, -3.55271e-15, 0, 1, 0, 3.55271e-15, 0, 1, 220, 1, -3.05176e-05 )
mesh = ExtResource( 7 )
material/0 = null
material/1 = null
material/2 = null

[node name="areaFloresta" type="Area" parent="tree_obj"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 40, 0 )

[node name="CollisionShape" type="CollisionShape" parent="tree_obj/areaFloresta"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.07146, 0 )
shape = SubResource( 4 )

[node name="portal" type="CSGMesh" parent="tree_obj"]
transform = Transform( 50, 0, -1.36424e-12, 0, 50, 0, 1.36424e-12, 0, 50, 100.383, 54.9525, 0.737946 )
mesh = SubResource( 5 )
material = SubResource( 6 )

[node name="Position0" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 45 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 34.306, 2, -25.9783 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position2" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -40, 2, -25.914 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position3" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5.80577, 1.5, 8.40453 )
__meta__ = {
"_edit_lock_": true
}

[node name="boat" type="MeshInstance" parent="."]
transform = Transform( -6.55671e-08, 0, 1.5, 0, 1.5, 0, -1.5, 0, -6.55671e-08, -3.65581, -1.45093, 67.9818 )
mesh = ExtResource( 6 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = null
material/18 = null
material/19 = null
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = null
material/27 = null
material/28 = null
material/29 = null
material/30 = null
material/31 = null
material/32 = null
material/33 = null
material/34 = null
material/35 = null
material/36 = null
material/37 = null
material/38 = null
material/39 = null
material/40 = null
material/41 = null
material/42 = null
material/43 = null
material/44 = null
material/45 = null
material/46 = null
material/47 = null
material/48 = null
material/49 = null
material/50 = null
material/51 = null
material/52 = null
material/53 = null
material/54 = null
material/55 = null
material/56 = null
material/57 = null
material/58 = null
material/59 = null
material/60 = null
material/61 = null
material/62 = null
material/63 = null
material/64 = null
material/65 = null
material/66 = null
material/67 = null
material/68 = null
material/69 = null
material/70 = null
material/71 = null
material/72 = null
material/73 = null
material/74 = null
material/75 = null
material/76 = null
material/77 = null
material/78 = null
material/79 = null
material/80 = null
material/81 = null
material/82 = null
material/83 = null
material/84 = null
material/85 = null
material/86 = null
material/87 = null
material/88 = null
__meta__ = {
"_edit_lock_": true
}

[node name="areaBoat" type="Area" parent="boat"]
transform = Transform( 0.999996, 0, 1.06581e-14, 0, 1, 0, -7.10543e-15, 0, 1, 10.4655, 3.97834, -0.634799 )

[node name="CollisionShape" type="CollisionShape" parent="boat/areaBoat"]
transform = Transform( 0.999998, 4.59704e-08, -3.53903e-08, -9.89075e-09, 0.999998, -1.16415e-10, 4.47035e-08, -1.22236e-09, 0.999998, 2.436, 0, 4.75974 )
shape = SubResource( 7 )

[node name="CollisionShape2" type="CollisionShape" parent="boat/areaBoat"]
transform = Transform( 1, 4.95402e-09, -7.45053e-09, -8.06085e-09, 1, -5.82077e-11, 1.11759e-08, -3.20142e-10, 1, -0.717999, 0, -4.3452 )
shape = SubResource( 8 )

[node name="CollisionShape3" type="CollisionShape" parent="boat/areaBoat"]
transform = Transform( 1, 1.42791e-08, -1.86264e-08, -1.36388e-08, 0.999999, 0, 2.23517e-08, -6.1118e-10, 0.999999, -0.724846, 0, 14.0077 )
shape = SubResource( 8 )

[node name="pier" parent="boat" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.54087, -0.216092, 8.61415 )

[node name="house" parent="." instance=ExtResource( 11 )]
transform = Transform( -4.37114e-07, 0, 10, 0, 10, 0, -10, 0, -4.37114e-07, 0, 0, 22 )

[node name="areaHouse" type="Area" parent="house"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.27715, 0.463729, 0.467335 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="house/areaHouse"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.162632, 0, 0.0334466 )
shape = SubResource( 9 )

[connection signal="body_entered" from="Cave_Prop_Entrance_1/areaCave" to="." method="_on_areaCave_body_entered"]
[connection signal="body_entered" from="tree_obj/areaFloresta" to="." method="_on_areaFloresta_body_entered"]
[connection signal="body_entered" from="boat/areaBoat" to="." method="_on_areaBoat_body_entered"]
[connection signal="body_entered" from="house/areaHouse" to="." method="_on_areaHouse_body_entered"]
